--- a/nutui/packages/__VUE/tabbar/index.scss
+++ b/nutui/packages/__VUE/tabbar/index.scss
@@ -26,7 +26,7 @@
   }
 
   &-safebottom {
-    padding-bottom: constant(safe-area-inset-bottom);
-    padding-bottom: env(safe-area-inset-bottom);
+    padding-bottom: calc(constant(safe-area-inset-bottom) + 7px);
+    padding-bottom: calc(env(safe-area-inset-bottom) + 7px);
   }
 }
