新增几个组件

--- a/style/app.scss
+++ b/style/app.scss
@@ -1,2 +1,3 @@
 @import '@/nutui/packages/styles/font/iconfont.css';
 @import '@/nutui/packages/__VUE/cellgroup/index.scss';
+@import '@/nutui/packages/styles/animation/index.scss'
