--- a/nutui/packages/styles/variables.scss
+++ b/nutui/packages/styles/variables.scss
@@ -805,4 +805,4 @@ $ellipsis-expand-collapse-color: #3460fa !default;
 $nut-water-mark-z-index: 2000 !default;
 
 @import './mixins/index';
-@import './animation/index';
+//@import './animation/index';
