--- a/style/app.scss
+++ b/style/app.scss
@@ -1,3 +1,4 @@
 @import '@/nutui/packages/styles/font/iconfont.css';
 @import '@/nutui/packages/__VUE/cellgroup/index.scss';
+@import '@/nutui/packages/__VUE/checkbox/index.scss';
 @import '@/nutui/packages/styles/animation/index.scss'
