--- a/uni_modules/nutui/packages/__VUE/numberkeyboard/index.scss
+++ b/uni_modules/nutui/packages/__VUE/numberkeyboard/index.scss
@@ -66,7 +66,7 @@
         background-color: $numberkeyboard-key-active-background-color;
       }
 
-      img {
+      image {
         width: 30px;
         height: 24px;
       }
