--- a/uni_modules/nutui/packages/__VUE/drag/index.scss
+++ b/uni_modules/nutui/packages/__VUE/drag/index.scss
@@ -10,7 +10,7 @@
   }
 }
 .nut-taro-drag {
-  // position: fixed;
+   position: fixed;
   display: inline-block;
   z-index: 9997 !important;
   width: fit-content;
