--- a/uni_modules/nutui/packages/__VUE/overlay/index.scss
+++ b/uni_modules/nutui/packages/__VUE/overlay/index.scss
@@ -20,3 +20,8 @@
 .nut-overflow-hidden {
   overflow: hidden !important;
 }
+
+
+.nut-numberkeyboard-overlay {
+  background-color: rgba(0, 0, 0, 0) !important;
+}
