--- a/uni_modules/sky-nutui/components/sky-nutui/app.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/app.scss
@@ -6,4 +6,6 @@
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/navbar/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/radio/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/icon/index.scss';
+@import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatar/index.scss';
+@import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatargroup/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/styles/animation/index.scss';
