--- a/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatar/index.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatar/index.scss
@@ -10,6 +10,10 @@
     width: 100%;
     height: 100%;
   }
+  image {
+    width: 100%;
+    height: 100%;
+  }
   .icon {
     background-size: 100% 100%;
     position: absolute;
