--- a/uni_modules/sky-nutui/components/sky-nutui/app.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/app.scss
@@ -8,4 +8,5 @@
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/icon/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatar/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatargroup/index.scss';
+@import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/step/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/styles/animation/index.scss';
