--- a/uni_modules/sky-nutui/components/sky-nutui/app.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/app.scss
@@ -9,4 +9,5 @@
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatar/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/avatargroup/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/step/index.scss';
+@import '@/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/card/index.scss';
 @import '@/uni_modules/sky-nutui/components/sky-nutui/packages/styles/animation/index.scss';
