--- a/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/tabbar/index.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/tabbar/index.scss
@@ -10,9 +10,9 @@
   border-top: $tabbar-border-top;
   width: 100%;
   display: flex;
-  
-  padding: 7px 0;
-  box-sizing: border-box;
+  height: 50px;
+  align-items: center;
+  box-sizing: content-box;
   background: $white;
 
   &:last-child {
@@ -27,7 +27,7 @@
   }
 
   &-safebottom {
-    padding-bottom: calc(constant(safe-area-inset-bottom) + 7px);
-    padding-bottom: calc(env(safe-area-inset-bottom) + 7px);
+    padding-bottom: constant(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
   }
 }
