--- a/uni_modules/sky-nutui/components/sky-nutui/packages/styles/variables.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/styles/variables.scss
@@ -804,5 +804,11 @@ $ellipsis-expand-collapse-color: #3460fa !default;
 // WaterMark
 $nut-water-mark-z-index: 2000 !default;
 
+
+// TrendArrow
+$trendarrow-font-size: 14px !default;
+$trendarrow-before-icon-margin: 4px !default;
+
+
 @import './mixins/index';
 //@import './animation/index';
