--- a/uni_modules/sky-nutui/components/sky-nutui/packages/styles/font/iconfont.css
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/styles/font/iconfont.css
@@ -1,15 +1,24 @@
 @font-face {
   font-family: "nutui-iconfont"; /* Project id 2166874 */
-  src: url('./iconfont.woff2') format('woff2'),
-       url('./iconfont.woff') format('woff'),
-       url('./iconfont.ttf') format('truetype');
+  src: url('iconfont.woff2?t=1662618531522') format('woff2'),
+       url('iconfont.woff?t=1662618531522') format('woff'),
+       url('iconfont.ttf?t=1662618531522') format('truetype');
 }
+
 .nutui-iconfont {
   font-family: "nutui-iconfont" !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.nut-icon-triangle-down:before {
+  content: "\eb6d";
+}
+
+.nut-icon-triangle-up:before {
+  content: "\eb6e";
 }
 
 .nut-icon-image-error:before {
