--- a/uni_modules/sky-nutui/components/sky-nutui/app.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/app.scss
@@ -12,4 +12,5 @@
 @import './packages/__VUE/card/index.scss';
 @import './packages/__VUE/ecard/index.scss';
 @import './packages/__VUE/sku/index.scss';
+@import './packages/__VUE/tabs/index.scss';
 @import './packages/styles/animation/index.scss';
