fix:radio component

--- a/uni_modules/sky-nutui/components/sky-nutui/app.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/app.scss
@@ -13,4 +13,6 @@
 @import './packages/__VUE/ecard/index.scss';
 @import './packages/__VUE/sku/index.scss';
 @import './packages/__VUE/tabs/index.scss';
+@import './packages/__VUE/radiogroup/index.scss';
 @import './packages/styles/animation/index.scss';
+
