完善tabbar/cell/actionsheet黑暗模式

--- a/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/actionsheet/index.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/actionsheet/index.scss
@@ -1,3 +1,19 @@
+.nut-theme-dark {
+    .nut-actionsheet-panel{
+        .nut-actionsheet-cancel,
+        .nut-actionsheet-item {
+            background: $dark-background2;
+            color: $dark-color;
+        }
+      
+        .nut-actionsheet-title {
+            border-bottom: 1px solid $dark-background3 !important;
+            background: $dark-background2;
+            color: $dark-color;
+            box-shadow: none;
+        }
+    }
+}
 .nut-actionsheet-panel {
   display: block;
   .nut-actionsheet-title {
