--- a/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/cell/index.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/cell/index.scss
@@ -2,7 +2,7 @@
   .nut-cell {
     background: $dark-background2;
     color: $dark-color;
-    box-shadow: none;
+    box-shadow: 0px 1px 7px 0px $dark-background3;
   }
 }
 .nut-cell {
