--- a/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/tabbar/index.scss
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/tabbar/index.scss
@@ -1,6 +1,7 @@
 .nut-theme-dark {
   .nut-tabbar {
     background: $dark-background;
+    border-top-color: $dark-background;
   }
 }
 .nut-tabbar {
