--- a/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/rate/template.html
+++ b/uni_modules/sky-nutui/components/sky-nutui/packages/__VUE/rate/template.html
@@ -5,7 +5,7 @@
             :class="{ 'nut-rate-item__icon--disabled': disabled || n > modelValue }"
             :color="n <= modelValue ? activeColor : voidColor" :font-class-name="fontClassName"
             :class-prefix="classPrefix" :name="n <= modelValue ? checkedIcon : uncheckedIcon" />
-        <nut-icon v-if="allowHalf && Number(modelValue) + 1 > n" class="nut-rate-item__icon a nut-rate-item__icon--half"
+        <nut-icon v-if="allowHalf && Number(modelValue) + 1 > n" class="nut-rate-item__icon nut-rate-item__icon--half"
             @click="onClick(2, n)" :font-class-name="fontClassName" :class-prefix="classPrefix"
             :color="n <= Number(modelValue) + 1 ? activeColor : voidColor" :size="iconSize" :name="checkedIcon" />
         <nut-icon v-else-if="allowHalf && Number(modelValue) + 1 <= n"
